-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.4, 5.0.2
-
None
-
Windows 7, Ubuntu12, Mac OS X
-
9e2c4bc67f30eb1e8d776afe3a092d5994aaab38 (stable, 6.5.2014, 5.3.1). bdcb3a821258f3d5f01e7d9b162b24c1c64236e9. (4.8, 6.5.2014, 4.8.7)
In an application that has multiple main windows that have a QMdiArea as a central widget the subwindow is not resized correctly if a dock widget is hidden. With the example application (attached) the subwindow in the other main window is resized correctly but in the other it’s not. The difference is shown in the picture attached.
Here are the steps to reproduce the issue with the attached application:
- run the application -> two main windows are shown
- toggle the visibility of the main window that is labeled “Window 2” using the toolbar button (monkey) -> the sub window should grow to fill the space available
- toggle the visibility of the main window that is labeled “Window 1” using the toolbar button -> the sub window is resized correctly to fill the space available
With qtbug31448.zip :
- Launch example, resize Window 1. Note subwindow is not resized
- Resize Window 2. Note subwindow is resized
- Toggle visibility of dock in any window, note funny resizing behaviour of the other windows (pass number > 2 on cmd line)
For Gerrit Dashboard: QTBUG-31448 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
68181,1 | Fix QMdiArea subwindow problem | stable | qt/qtbase | Status: ABANDONED | 0 | 0 |
84587,1 | QMdiArea: Ignore events of other instances in the event filter. | stable | qt/qtbase | Status: MERGED | +2 | 0 |
84714,1 | QMdiArea: Ignore events of other instances in the event filter. | 4.8 | qt/qt | Status: MERGED | +2 | 0 |